<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_point"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <EditText
        android:id="@+id/et_edit_trip_stop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/trip_stop_name"
        android:textSize="@dimen/text_24"/>

    <EditText
        android:id="@+id/et_edit_trip_stop_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="top|left"
        android:hint="@string/description"
        android:maxLines="6"
        android:minLines="4"
        android:textSize="@dimen/text_24" />

    <EditText
        android:id="@+id/et_edit_trip_stop_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/money_for_trip_stop"
        android:textSize="@dimen/text_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update_edit_trip_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/btn_cancel_edit_trip_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>