<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_15"
    tools:context=".trip.EditTripActivity">

    <EditText
        android:id="@+id/et_edit_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        android:textSize="@dimen/text_24"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_edit_transport_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintTop_toBottomOf="@id/et_edit_trip_name" />

    <EditText
        android:id="@+id/et_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="top|left"
        android:hint="@string/description"
        android:maxLines="10"
        android:minLines="8"
        android:scrollbars="vertical"
        android:textSize="@dimen/text_24"
        app:layout_constraintTop_toBottomOf="@id/spinner_edit_transport_type" />

    <EditText
        android:id="@+id/et_edit_actual_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/money_for_trip"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_24"
        app:layout_constraintTop_toBottomOf="@id/et_edit_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        app:layout_constraintTop_toBottomOf="@id/et_edit_actual_money"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_trip_back">

        <LinearLayout
            android:id="@+id/ll_for_trip_stops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/btn_update_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_edit_trip_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>